# CAMII_dev

./: .gitignore  00.calibParameterCalculation.py  01.colony_detection.py  02.optimize_colony_picking.py  03.colonyCoordinatesCorrection.py  README.md  _demo_20241107_1.sh  _demo_20241107_2.sh  _isolate_interaction.py  align.py  calc_calib_params.py  correct_coords.py  data_transform.py  data_transform.sh  detect_colonies.py  detector.py  draw_interaction.py  env.yml  environment.yml  hyperspectral_processing.py  imaging_picking_function.py  isolate_interaction.py  pick_colonies.py  pyproject.toml  requirements.txt  select_colonies.py  test.py  utils.py
test_data/01_detect/: FT1AR80_annot.json  FT1AR80_metadata.csv  FT1AR81_annot.json  FT1AR81_metadata.csv  FT4AR80_annot.json  FT4AR80_metadata.csv
test_data/02_select/: FT1AR80_annot_final.json  FT1AR80_annot_init.json  FT1AR80_annot_init_post.json  FT1AR80_metadata_final.csv  FT1AR80_metadata_init.csv  FT1AR81_annot_final.json  FT1AR81_annot_init.json  FT1AR81_annot_init_post.json  FT1AR81_metadata_final.csv  FT1AR81_metadata_init.csv  FT4AR80_annot_final.json  FT4AR80_annot_init.json  FT4AR80_annot_init_post.json  FT4AR80_metadata_final.csv  FT4AR80_metadata_init.csv
test_data/03_pick/: FT1AR80_metadata.csv  FT1AR80_picking.csv  FT1AR80_picking_corrected.csv  FT1AR81_metadata.csv  FT1AR81_picking.csv  FT1AR81_picking_corrected.csv  FT4AR80_metadata.csv  FT4AR80_picking.csv  FT4AR80_picking_corrected.csv
test_data/configs/: configure.yaml  configure_align.yaml  configure_align_hsi.yaml  configure_all.yaml  (+7 more)
(+29 files in other folders)
