[project]
name = "camii_dev"
version = "1.2.0"
description = "Data analysis pipelines for CAMII"
readme = "README.md"
requires-python = "==3.10"
authors = [{name = "whatever60", email = "quym@foxmail.com"}]

dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "torch==2.3.1",
    "networkx==3.2.1",
    "opencv-python-headless==4.9.0.80",
    "pillow==10.1.0",
    "matplotlib==3.8.3",
    "rich==13.6.0",
    "polars==1.1.0",
    "tqdm==4.66.1",
    "scipy==1.13.0",
    "scikit-image==0.23.2",
    "dendropy==4.6.1",
    "transformers==4.39.1",
    "pycirclize==1.1.0",
    "biopython==1.84",
    "joblib==1.3.2",
    "numba==0.58.1",
    "python-tsp==0.4.0",
    "seaborn==0.13.1",
    "pyyaml==6.0.1",
    "biom-format==2.1.15"
]
